      present in a list of items to be processed, typically 
      during session.expunge_all() and dependent methods.

    - Some improvements to the _CompileOnAttr mechanism which
      should reduce the probability of "Attribute x was 
      not replaced during compile" warnings. (this generally
      applies to SQLA hackers, like Elixir devs).
      
- ext
    - Class-bound attributes sent as arguments to 
      relation()'s remote_side and foreign_keys parameters 
      are now accepted, allowing them to be used with declarative.
      
- mysql
    - Quoting of MSEnum values for use in CREATE TABLE is now
      optional & will be quoted on demand as required.  (Quoting was
      always optional for use with existing tables.) [ticket:1110]

0.5beta2
========
    - 0.5beta2 includes some of the bugfixes listed under 
      release "0.4.7".

- orm
    - In addition to expired attributes, deferred attributes
      also load if their data is present in the result set.
      [ticket:870]
    
    - session.refresh() raises an informative error message if
      the list of attributes does not include any column-based
      attributes.
    
    - query() raises an informative error message if no columns
      or mappers are specified.
      
    - lazy loaders now trigger autoflush before proceeding.  This
      allows expire() of a collection or scalar relation to 
      function properly in the context of autoflush.
      
    - column_property() attributes which represent SQL expressions
      or columns that are not present in the mapped tables
      (such as those from views) are automatically expired
      after an INSERT or UPDATE, assuming they have not been
      locally modified, so that they are refreshed with the
      most recent data upon access.  [ticket:887]

    - Fixed explicit, self-referential joins between two 
      joined-table inheritance mappers when using 
      query.join(cls, aliased=True).  [ticket:1082]
